<resources>
    <string name="app_name">hospital</string>
    <string name="binli_manage">病例管理</string>
    <string name="fuzheng_datemanage">复诊数据管理</string>
    <string name="recoverstate">恢复状态</string>
    <string name="accountset">账号设置</string>
    <string name="passwordchange">密码更改</string>
    <string name="recoverremind">康复管理提醒</string>
    <string name="text_registered">注册</string>
    <string name="datecomplete">资料完善</string>
    <string name="remindset">提醒设置</string>
    <string name="help">帮助</string>
    <string name="consult">咨询医生</string>
    <string name="health">健康管理</string>
    <string name="text_keep_password">记住密码</string>
    <string name="text_register_remind">注册成功需要前往邮箱验证，否则无法登录！</string>
    <string name="text_user_name">用户名</string>
    <string name="text_ages">年龄</string>
    <string name="text_nothing">这个人很懒，什么都没有留下！</string>
    <string name="text_tost_empty">输入框不能为空</string>
    <string name="text_two_input_not_consistent">两次输入的密码不一致</string>
    <string name="text_desc">简介</string>
    <string name="text_password">密码</string>
    <string name="text_boy">男</string>
    <string name="text_girl">女</string>
    <string name="center">个人中心</string>
    <string name="text_editor_password">修改密码</string>
    <string name="text_now_password">旧密码</string>
    <string name="text_new_password">新密码</string>
    <string name="text_password_again">再次输入密码</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_email">邮箱</string>
    <string name="text_registered_failure">注册失败：</string>
    <string name="text_registered_successful">注册成功</string>
</resources>
